--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -8,7 +8,11 @@
 - name: Start Mysql Service
   service: name=mysql state=started enabled=true
 
-- name: Set MySQL root password (%)
+- name: Generate random MySQL root password
+  command: openssl rand -base64 20
+  register: mysql_root_password
+
+  - name: Set MySQL root password (%)
   mysql_user: name=root password={{mysql_root_password}} host=% priv=*.*:ALL,GRANT check_implicit_admin=yes
 
 - name: Save MySQL root password
