--- a/tasks/general.yml
+++ b/tasks/general.yml
@@ -1,3 +1,12 @@
 ---
+- name: Upgrade whole system
+  apt: upgrade=full
+
+- name: Install admin essentials
+  apt: pkg={{ item }} state=latest
+  with_items:
+   - mc
+   - htop
+ 
 - name: Create otsmanager system user
   user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create state=present
