--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -10,10 +10,10 @@
 
 - name: Generate random MySQL root password
   command: openssl rand -base64 20
-  register: mysql_root_password
+  register: randompass
 
 - name: Set MySQL root password (%)
-  mysql_user: name=root password={{mysql_root_password}} host=% priv=*.*:ALL,GRANT check_implicit_admin=yes
+  mysql_user: name=root password={{randompass.ustdout}} host=% priv=*.*:ALL,GRANT check_implicit_admin=yes
 
 - name: Save MySQL root password
   template: src=.my.cnf dest=/root/.my.cnf owner=root group=root mode=0600
