--- a/tasks/general.yml
+++ b/tasks/general.yml
@@ -10,3 +10,21 @@
  
 - name: Create otsmanager system user
   user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create state=present
+
+- name: Create public_html directory
+  file: path=/home/otsmanager/www/public_html owner=otsmanager group=otsmanager mode=0755
+
+- name: Create upstart config directory for otsmanager
+  file: path=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0755
+
+- name: Install upstart session job for TFS for otsmanager
+  template: src=templates/tfs.conf dest=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0644
+
+- name: Install upstart session runner 1
+  template: src=templates/session-init-setup.conf dest=/etc/init/session-init-setup.conf owner=root group=root mode=0644
+
+- name: Install upstart session runner 2
+  template: src=templates/session-init.conf dest=/etc/init/session-init.conf owner=root group=root mode=0644
+
+- name: Start upstart session
+  service: name=session-init-setup state=started
