--- a/tasks/general.yml
+++ b/tasks/general.yml
@@ -12,10 +12,10 @@
   user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create state=present
 
 - name: Create public_html directory
-  file: path=/home/otsmanager/www/public_html owner=otsmanager group=otsmanager mode=0755
+  file: path=/home/otsmanager/www/public_html owner=otsmanager group=otsmanager mode=0755 state=directory
 
 - name: Create upstart config directory for otsmanager
-  file: path=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0755
+  file: path=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0755 state=directory
 
 - name: Install upstart session job for TFS for otsmanager
   template: src=templates/tfs.conf dest=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0644
