--- a/templates/session-init-setup.conf
+++ b/templates/session-init-setup.conf
@@ -19,5 +19,5 @@
    chmod 0700 "$XDG_RUNTIME_DIR"
    chown "$uid:$gid" "$XDG_RUNTIME_DIR"
 
-  start session_init USER="$user"
+  start session-init USER="$user"
 end script
