--- a/templates/tfs.conf
+++ b/templates/tfs.conf
@@ -2,10 +2,10 @@ description "The Forgotten Server"
 author "Daniel Speichert <daniel@speichert.pro>"
 
 # When to start the service
-start on started mysql and runlevel [2345]
+start on (started mysql and runlevel [2345])
 
 # When to stop the service
-stop on stopping mysql or runlevel [!2345]
+stop on (stopping mysql or runlevel [!2345])
 
 # Automatically restart process if crashed
 respawn
