--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install nginx
-  apt: pkg=nginx state=present
+  apt: pkg=nginx state=latest
 
 - name: Copy nginx configuration for default vhost
   template: src=templates/nginx-vhost.conf dest=/etc/nginx/sites-available/default
