--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -1,7 +1,7 @@
 server {
-    listen       3380 default_server;
+    listen       80 default_server;
     server_name  _;
-    root /usr/share/phpmyadmin;
+    root /home/otsmanager/www/public_html;
  
 	client_max_body_size 64M;
  
@@ -15,20 +15,12 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri /index.php =404;
+        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_index index.php;
-        fastcgi_pass  unix:/var/run/php5-fpm.sock;
+        fastcgi_pass  unix:/var/run/php5-fpm-otsmanager.sock;
         fastcgi_param   SCRIPT_FILENAME
                         $document_root$fastcgi_script_name;
         include       fastcgi_params;
-    }
-    
-    location /libraries {
-        deny all;
-    }
-    
-    location /setup/lib {
-        deny all;
     }
 }
