--- a/templates/phpmyadmin-vhost.conf
+++ b/templates/phpmyadmin-vhost.conf
@@ -1,7 +1,7 @@
 server {
-    listen       80;
-    server_name  ;
-    root /home/otsmanager/www/public_html;
+    listen       3380 default_server;
+    server_name  _;
+    root /usr/share/phpmyadmin;
  
 	client_max_body_size 64M;
  
@@ -15,12 +15,20 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri /index.php =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_index index.php;
-        fastcgi_pass  unix:/var/run/php5-fpm-otsmanager.sock;
+        fastcgi_pass  unix:/var/run/php5-fpm.sock;
         fastcgi_param   SCRIPT_FILENAME
                         $document_root$fastcgi_script_name;
         include       fastcgi_params;
+    }
+    
+    location /libraries {
+        deny all;
+    }
+    
+    location /setup/lib {
+        deny all;
     }
 }
