DevAAC, TFS compilation

--- a/local.yml
+++ b/local.yml
@@ -6,7 +6,8 @@
     - include: tasks/nginx.yml
     - include: tasks/php5-fpm.yml
     - include: tasks/tfs.yml
-    #- include: tasks/DevAAC.yml
+    - include: tasks/DevAAC.yml
+      tags: DevAAC
 
   handlers:
     - name: restart nginx
