--- a/local.yml
+++ b/local.yml
@@ -3,11 +3,12 @@
   tasks:
     - include: tasks/general.yml
     - include: tasks/mysql.yml
+    - include: tasks/php5-fpm.yml
+    - include: tasks/nginx.yml
     - include: tasks/DevAAC.yml
       tags: DevAAC
-    - include: tasks/nginx.yml
-    - include: tasks/php5-fpm.yml
     - include: tasks/tfs.yml
+    - include: tasks/general-last.yml
 
   handlers:
     - name: restart nginx
