--- a/tasks/general.yml
+++ b/tasks/general.yml
@@ -9,7 +9,7 @@
    - htop
  
 - name: Create otsmanager system user
-  user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create state=present
+  user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create shell=/bin/bash state=present
 
 - name: Create upstart config directory for otsmanager
   file: path=/home/otsmanager/.config/upstart owner=otsmanager group=otsmanager mode=0755 state=directory
