--- a/local.yml
+++ b/local.yml
@@ -5,6 +5,7 @@
     - include: tasks/mysql.yml
     - include: tasks/php5-fpm.yml
     - include: tasks/nginx.yml
+    - include: tasks/phpmyadmin.yml
     - include: tasks/DevAAC.yml
       tags: DevAAC
     - include: tasks/tfs.yml
