Stop requiring LuaJIT - makes it compatible with Ubuntu < 14.04, fixed otsmanager's help text, set tfs upstart job to autostart by default

--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -1,9 +1,10 @@
 ---
-- name: Install Mysql Server package
+- name: Install MySQL Server and backup packages
   apt: pkg={{ item }} state=latest
   with_items:
    - mysql-server
    - python-mysqldb
+   - automysqlbackup
 
 - name: Start Mysql Service
   service: name=mysql state=started enabled=true
