--- a/tasks/php5-fpm.yml
+++ b/tasks/php5-fpm.yml
@@ -7,6 +7,7 @@
     - php5-mysqlnd
     - php5-json
     - php5-cli
+    - php5-curl
 
 - name: Set php.ini display_errors
   lineinfile: dest=/etc/php5/fpm/php.ini line="display_errors = On" regexp="^display_errors =" state=present
