--- a/templates/session-init.conf
+++ b/templates/session-init.conf
@@ -9,5 +9,5 @@ script
   export XDG_RUNTIME_DIR="/run/user/$uid"
   export HOME
 
-  exec su -s /bin/sh -c 'exec "$0" "$@"' $USER -- init --user
+  exec su -s /bin/sh -c 'exec "$0" "$@"' $USER -- /sbin/init --user
 end script
