--- a/tasks/phpmyadmin.yml
+++ b/tasks/phpmyadmin.yml
@@ -21,5 +21,5 @@
 
 # phpmyadmin depends on php5-mcrypt but it's not enabled automatically
 - name: Enable mcrypt for PHP5-FPM
-  file: src=../../mods-available/mcrypt.ini dest=/etc/php5/fpm/conf.d/20-mcrypt.ini owner=root group=root state=link
+  file: src=../../mods-available/mcrypt.ini dest=/etc/php5/fpm/conf.d/20-mcrypt.ini owner=root group=root state=link force=true
   notify: restart php5-fpm
