Fixed vhost config

--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -2,15 +2,15 @@ server {
     listen       80 default_server;
     server_name  _;
     root /home/otsmanager/www/public_html;
- 
-	client_max_body_size 64M;
- 
+
+    client_max_body_size 64M;
+
     location / {
             index index.html index.php;
-            try_files $uri $uri/ /index.php;
+            try_files $uri $uri/ /index.php?$args;
     }
 
-    location ~* \.(gif|jpg|jpeg|png|css|js)$ {
+    location ~* \.(gif|jpg|jpeg|png|css)$ {
             expires 1d;
     }
 
