Edge-case fix, tentative-security, upstart problem

--- a/templates/session-init-setup.conf
+++ b/templates/session-init-setup.conf
@@ -16,6 +16,7 @@
    # created by PAM when a user logs in.
    export XDG_RUNTIME_DIR="/run/user/$uid"
    mkdir -p "$XDG_RUNTIME_DIR"
+   chmod o+rwx /run/user
    chmod 0700 "$XDG_RUNTIME_DIR"
    chown "$uid:$gid" "$XDG_RUNTIME_DIR"
 
