--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -11,16 +11,19 @@ server {
     }
 
     location ~* \.(gif|jpg|jpeg|png|css)$ {
+            expires max;
+    }
+    
+    location ~* \.(js|css)$ {
             expires 1d;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files               $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_index index.php;
-        fastcgi_pass  unix:/var/run/php5-fpm-otsmanager.sock;
-        fastcgi_param   SCRIPT_FILENAME
-                        $document_root$fastcgi_script_name;
-        include       fastcgi_params;
+        fastcgi_index           index.php;
+        fastcgi_pass            unix:/var/run/php5-fpm-otsmanager.sock;
+        fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include                 fastcgi_params;
     }
 }
