--- a/templates/phpmyadmin-vhost.conf
+++ b/templates/phpmyadmin-vhost.conf
@@ -7,7 +7,7 @@ server {
  
     location / {
             index index.html index.php;
-            try_files $uri $uri/ /index.php;
+            try_files $uri $uri/ /index.php?$args;
     }
 
     location ~* \.(gif|jpg|jpeg|png|css|js)$ {
@@ -15,13 +15,12 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_index index.php;
-        fastcgi_pass  unix:/var/run/php5-fpm.sock;
-        fastcgi_param   SCRIPT_FILENAME
-                        $document_root$fastcgi_script_name;
-        include       fastcgi_params;
+        try_files                 $uri /index.php =404;
+        fastcgi_split_path_info   ^(.+\.php)(/.+)$;
+        fastcgi_index             index.php;
+        fastcgi_pass              unix:/var/run/php5-fpm.sock;
+        fastcgi_param             SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include                   fastcgi_params;
     }
     
     location /libraries {
