Update for better systemd

--- a/local.yml
+++ b/local.yml
@@ -16,6 +16,8 @@
     - include: tasks/general-last.yml
 
   handlers:
+    - name: restart systemd-journald
+      service: name=systemd-journald state=restarted
     - name: restart nginx
       service: name=nginx state=restarted
 
