--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -25,4 +25,5 @@
 
 - name: Install /etc/systemd/journald.conf.d/journald.conf
   template: src=systemd/journald.conf dest=/etc/systemd/journald.conf.d/journald.conf owner=root group=root mode=0644
+  notify: restart systemd-journald
  
