--- a/templates/tfs.service
+++ b/templates/tfs.service
@@ -6,6 +6,7 @@ After=network.target mysql.service
 Type=simple
 ExecStart=/home/otsmanager/forgottenserver/build/tfs
 WorkingDirectory=/home/otsmanager/forgottenserver
+Restart=always
 
 [Install]
 WantedBy=default.target
