--- a/tasks/general.yml
+++ b/tasks/general.yml
@@ -9,6 +9,9 @@
    - htop
    - unrar
  
+- name: Remove LXC in case it's installed (Ubuntu Cloud has it)
+  apt: pkg=lxc state=absent
+
 - name: Create otsmanager system user
   user: name=otsmanager password=$6$e8gmLzXM.YGXKz$L5YwwV8FitP1WGZQoVTH.1mUcOyFGe7HbYxhl2jJS7a05D1BIsjxUgfxRcjTwGd9riy6w1bqfRCjIq53WN3Kh. update_password=on_create shell=/bin/bash groups=systemd-journal append=yes state=present
 
