--- a/tasks/DevAAC.yml
+++ b/tasks/DevAAC.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install composer
-  shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin
+  shell: curl -sS https://getcomposer.org/installer | HOME=/root php -- --install-dir=/usr/local/bin
          creates=/usr/local/bin/composer.phar
 
 - git: repo=https://github.com/DevelopersPL/DevAAC.git
