--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -9,13 +9,14 @@
    - libmysqlclient-dev
    - libboost-system-dev
    - liblua5.2-dev
+   - libpugixml-dev
 
 - name: Install LuaJIT package if available (since Ubuntu 14.04 Trusty) - TFS will automatically choose LuaJIT if installed
   apt: pkg=libluajit-5.1-dev state=latest
   ignore_errors: yes
 
 - name: Download latest TFS from git
-  git: repo=https://github.com/otland/forgottenserver.git version=1.1
+  git: repo=https://github.com/otland/forgottenserver.git
        dest=/home/otsmanager/forgottenserver
 
 - name: Generate random MySQL password
