--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -4,6 +4,7 @@ server {
     root /home/otsmanager/www/public_html;
 
     client_max_body_size 64M;
+    error_page 404 @notfound;
 
     location / {
             index index.html index.php;
@@ -22,10 +23,14 @@ server {
         try_files               $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_index           index.php;
-        fastcgi_pass            unix:/var/run/php5-fpm-otsmanager.sock;
+        fastcgi_pass            unix:/var/run/php-fpm-otsmanager.sock;
         fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include                 fastcgi_params;
         fastcgi_buffers         16 16k; 
         fastcgi_buffer_size     32k;
+    }
+    
+    location @notfound {
+        return 404 "The page or file you requested was not found. If this is your server, make sure you placed it under /home/otsmanager/www/public_html directory.";
     }
 }
