--- a/templates/php-fpm-pool.conf
+++ b/templates/php-fpm-pool.conf
@@ -1,5 +1,5 @@
-[DevAAC]
-listen = /var/run/php5-fpm-otsmanager.sock
+[otsmanager]
+listen = /var/run/php-fpm-otsmanager.sock
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
