LuaJIT package is now required

--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -10,10 +10,7 @@
    - libboost-system-dev
    - liblua5.2-dev
    - libpugixml-dev
-
-- name: Install LuaJIT package if available (since Ubuntu 14.04 Trusty) - TFS will automatically choose LuaJIT if installed
-  apt: pkg=libluajit-5.1-dev state=latest
-  ignore_errors: yes
+   - libluajit-5.1-dev
 
 - name: Download latest TFS from git
   git: repo=https://github.com/otland/forgottenserver.git
