--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -2,7 +2,7 @@
 - name: Install MySQL Server and backup packages
   apt: pkg={{ item }} state=latest
   with_items:
-   - mysql-server
+   - mariadb-server
    - python-mysqldb
    - automysqlbackup
 
@@ -13,37 +13,14 @@
   command: openssl rand -base64 18
   register: randompass
 
-- name: Set MySQL root password (localhost)
-  mysql_user: name=root password={{randompass.stdout}} host=localhost priv=*.*:ALL,GRANT check_implicit_admin=yes
+- name: Set MySQL otsmanager password (localhost)
+  mysql_user: name=otsmanager password={{randompass.stdout}} host=localhost priv=*.*:ALL,GRANT check_implicit_admin=yes
 
-- name: Save MySQL root password
-  template: src=.my.cnf dest=/root/.my.cnf owner=root group=root mode=0600
-
-- name: Save MySQL root password (for otsmanager)
+- name: Save MySQL otsmanager password
   template: src=.my.cnf dest=/home/otsmanager/.my.cnf owner=otsmanager group=otsmanager mode=0600
   
-- name: Set MySQL root password (%)
-  mysql_user: name=root password={{randompass.stdout}} host=% priv=*.*:ALL,GRANT check_implicit_admin=yes
-
-- name: Check hostname
-  command: hostname -f
-  register: realhostname
-  
-- name: Delete MySQL root accounts we don't want
-  mysql_user: name=root host={{item}} state=absent check_implicit_admin=yes
-  with_items:
-    - 127.0.0.1
-    - ::1
-    - realhostname.stdout
-
-- name: Ensure anonymous MySQL users are not in the database
-  mysql_user: name="" host={{item}} state=absent check_implicit_admin=yes
-  with_items:
-    - localhost
-    - 127.0.0.1
-
-- name: Delete MySQL test database
-  mysql_db: name=test state=absent
+- name: Set MySQL otsmanager password (%)
+  mysql_user: name=otsmanager password={{randompass.stdout}} host=% priv=*.*:ALL,GRANT check_implicit_admin=yes
 
 - name: Allow otsmanager to access automysqlbackup directory
   file: path=/var/lib/automysqlbackup state=directory group=otsmanager
