--- a/tasks/php7.0-fpm.yml
+++ b/tasks/php7.0-fpm.yml
@@ -7,6 +7,8 @@
     - php-mysqlnd
     - php-curl
     - php-xml
+    - php-mbstring
+    - php-gettext
     - composer
 
 - name: Set php.ini display_errors
