--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -11,6 +11,8 @@
   when: ansible_distribution_major_version|int > 15
   notify: restart mysql
 
+- meta: flush_handlers
+
 - name: Start Mysql Service
   service: name=mysql state=started enabled=true
 
