--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -15,6 +15,8 @@
 - name: Download latest TFS from git
   git: repo=https://github.com/otland/forgottenserver.git
        dest=/home/otsmanager/forgottenserver
+  become: true
+  become_user: otsmanager
 
 - name: Generate random MySQL password
   command: openssl rand -base64 18
@@ -37,16 +39,17 @@
 
 - name: Create build directory
   file: path=/home/otsmanager/forgottenserver/build owner=otsmanager group=otsmanager mode=0755 state=directory
+  become: true
+  become_user: otsmanager
 
 - name: Cmake forgottenserver source
-  command: cmake ..
-           chdir=/home/otsmanager/forgottenserver/build
+  command: cmake .. chdir=/home/otsmanager/forgottenserver/build
   tags: compile
+  become: true
+  become_user: otsmanager
 
 - name: Compile forgottenserver source
-  command: make
-           chdir=/home/otsmanager/forgottenserver/build
-  tags: compile           
-
-- name: Chown for otsmanager
-  command: chown otsmanager:otsmanager /home/otsmanager -R
+  command: make chdir=/home/otsmanager/forgottenserver/build
+  tags: compile
+  become: true
+  become_user: otsmanager
