--- a/tasks/php7.0-fpm.yml
+++ b/tasks/php7.0-fpm.yml
@@ -31,5 +31,14 @@
   template: src=templates/php-fpm-pool.conf dest=/etc/php/7.0/fpm/pool.d/otsmanager.conf
   notify: restart php7.0-fpm
 
+- name: Create /etc/systemd/system/php7.0-fpm.service.d
+  file: dest/etc/systemd/system/php7.0-fpm.service.d state=directory
+
+- name: Copy session-dir.conf unit override for PHP7.0-FPM
+  template: src=templates/systemd/php-session-dir.conf dest=/etc/systemd/system/php7.0-fpm.service.d/session-dir.conf
+  notify:
+    - reload systemd
+    - restart php7.0-fpm
+
 - name: Start php7.0-fpm Service
   service: name=php7.0-fpm state=started enabled=true
