--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -11,6 +11,7 @@
    - liblua5.2-dev
    - libpugixml-dev
    - libluajit-5.1-dev
+   - libboost-iostreams-dev
 
 - name: Download latest TFS from git
   git: repo=https://github.com/otland/forgottenserver.git
